--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7380,3 +7380,636 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rT1EThiXBu .navbar {
+  padding: .5rem 0;
+  background: #131313;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rT1EThiXBu .navbar-dropdown.bg-color.transparent.opened {
+  background: #131313;
+}
+.cid-rT1EThiXBu a {
+  font-style: normal;
+}
+.cid-rT1EThiXBu .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rT1EThiXBu .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rT1EThiXBu .nav-item:focus,
+.cid-rT1EThiXBu .nav-link:focus {
+  outline: none;
+}
+.cid-rT1EThiXBu .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rT1EThiXBu .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rT1EThiXBu .menu-logo {
+  margin-right: auto;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rT1EThiXBu .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rT1EThiXBu .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rT1EThiXBu .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rT1EThiXBu .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rT1EThiXBu .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rT1EThiXBu .dropdown .dropdown-menu {
+  background: #131313;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rT1EThiXBu .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rT1EThiXBu .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rT1EThiXBu .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rT1EThiXBu .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rT1EThiXBu .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rT1EThiXBu .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rT1EThiXBu .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rT1EThiXBu .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rT1EThiXBu .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rT1EThiXBu .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rT1EThiXBu .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rT1EThiXBu button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rT1EThiXBu button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rT1EThiXBu button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rT1EThiXBu button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rT1EThiXBu button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rT1EThiXBu button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rT1EThiXBu button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rT1EThiXBu nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rT1EThiXBu nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rT1EThiXBu nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rT1EThiXBu nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rT1EThiXBu .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rT1EThiXBu .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse.collapsing,
+.cid-rT1EThiXBu .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rT1EThiXBu .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rT1EThiXBu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rT1EThiXBu .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rT1EThiXBu .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rT1EThiXBu .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rT1EThiXBu .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5.9rem);
+  }
+}
+.cid-rT1EThiXBu .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rT1EThiXBu .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rT1EThiXBu .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rT1EThiXBu .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rT1EThiXBu .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rT1EThiXBu .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rT1EThiXBu .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-rT1EThiXBu .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rT1EThiXBu img {
+    height: 3.8rem !important;
+  }
+  .cid-rT1EThiXBu .btn {
+    display: -webkit-flex;
+  }
+  .cid-rT1EThiXBu button.navbar-toggler {
+    display: block;
+  }
+  .cid-rT1EThiXBu .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rT1EThiXBu .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rT1EThiXBu .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rT1EThiXBu .navbar-collapse.collapsing,
+  .cid-rT1EThiXBu .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rT1EThiXBu .navbar-collapse.collapsing .navbar-nav,
+  .cid-rT1EThiXBu .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rT1EThiXBu .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rT1EThiXBu .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rT1EThiXBu .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rT1EThiXBu .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rT1EThiXBu .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rT1EThiXBu .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rT1EThiXBu .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rT1EThiXBu .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rT1EThiXBu .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rT1EThiXBu .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rT1EThiXBu .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rT1EThiXBu .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rT1EThiXBu .nav-link:hover,
+.cid-rT1EThiXBu .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rT1ETioObm {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #131313;
+}
+.cid-rT1ETioObm P {
+  color: #767676;
+}
+.cid-rT1ETioObm H1 {
+  color: #cc2952;
+}
+.cid-rT1ETjzfAU {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rT1ETjzfAU .mbr-text {
+  color: #767676;
+}
+.cid-rT1ETjzfAU .mbr-text P {
+  text-align: left;
+}
+.cid-rT1ETkzldz {
+  padding-top: 0px;
+  padding-bottom: 105px;
+  background-color: #ffffff;
+}
+.cid-rT1ETkzldz .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-rT1ETkzldz .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rT1ETkzldz .media-container-row {
+    flex-wrap: wrap-reverse;
+    -webkit-flex-wrap: wrap-reverse;
+  }
+  .cid-rT1ETkzldz .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-rT1ETkzldz .mbr-text {
+  color: #767676;
+}
+.cid-rT1ETlvqJX {
+  background: #000000;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+.cid-rT1ETlvqJX .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rT1ETlvqJX .video-block {
+    width: 100% !important;
+  }
+}
+.cid-rT1ETmgvlU {
+  padding-top: 30px;
+  padding-bottom: 105px;
+  background-color: #ffffff;
+}
+.cid-rT1ETmgvlU .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-rT1ETmgvlU .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rT1ETmgvlU .media-container-row {
+    flex-wrap: wrap-reverse;
+    -webkit-flex-wrap: wrap-reverse;
+  }
+  .cid-rT1ETmgvlU .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-rT1ETmgvlU .mbr-text {
+  color: #767676;
+}
+.cid-rT1ETmZJ5R {
+  background: #000000;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+.cid-rT1ETmZJ5R .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rT1ETmZJ5R .video-block {
+    width: 100% !important;
+  }
+}
+.cid-rT1ETp5O7o {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rT1ETp5O7o .mbr-text,
+.cid-rT1ETp5O7o blockquote {
+  color: #767676;
+}
+.cid-rT1ETqcG2A {
+  padding-top: 15px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/ladyrelease-2-1280x785.jpeg");
+}
+.cid-rT1ETqcG2A img {
+  height: 210px;
+  object-fit: cover;
+  width: 210px;
+  border-radius: 100%;
+}
+.cid-rT1ETqcG2A .row {
+  justify-content: center;
+}
+.cid-rT1ETqcG2A .mbr-text {
+  color: #cccccc;
+}
+.cid-rT1ETqcG2A .item {
+  display: inline-flex;
+  align-items: center;
+  padding-right: 2rem;
+}
+.cid-rT1ETqcG2A .mbr-iconfont {
+  color: #cccccc !important;
+  font-size: 1rem!important;
+  padding-right: 0.5rem;
+  padding-bottom: 0.1rem;
+}
+.cid-rT1ETqcG2A .date {
+  margin: 0;
+  color: #cccccc;
+}
+.cid-rT1ETqcG2A .img-col {
+  margin: auto 0;
+}
+@media (max-width: 767px) {
+  .cid-rT1ETqcG2A .icon-box {
+    flex-direction: column;
+  }
+  .cid-rT1ETqcG2A .item {
+    padding-right: 0rem;
+    padding-bottom: 0.3rem;
+  }
+  .cid-rT1ETqcG2A img {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rT1ETry8Ba {
+  padding-top: 15px;
+  padding-bottom: 30px;
+  background-color: #131313;
+}
+.cid-rT1ETry8Ba .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rT1ETry8Ba .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rT1ETry8Ba .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rT1ETry8Ba .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rT1ETry8Ba .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rT1ETry8Ba .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rT1ETry8Ba .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rT1ETry8Ba .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rT1ETry8Ba .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rT1ETry8Ba .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rT1ETry8Ba .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rT1ETry8Ba .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rT1ETry8Ba .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rT1ETry8Ba .media-container-row .row-copirayt p {
+  width: 100%;
+}
