--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9912,6 +9912,29 @@ section.lazy-placeholder:after {
 .cid-rVzXipvYwh H2 {
   color: #ff3366;
 }
+.cid-rVFIPL3Z2o {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rVFIPL3Z2o .line {
+  background-color: #131313;
+  color: #131313;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rVFIPL3Z2o .section-text {
+  padding: 2rem 0;
+}
+.cid-rVFIPL3Z2o .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rVFIPL3Z2o .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rVAd542L65 {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -10054,6 +10077,24 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rVB7O3U53x .mbr-text {
+  color: #767676;
+}
+.cid-rVFFpKodnJ {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVFFpKodnJ .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVFFpKodnJ .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVFFpKodnJ .mbr-text {
   color: #767676;
 }
 .cid-rVAf0Breit {
@@ -10199,6 +10240,52 @@ section.lazy-placeholder:after {
 }
 .cid-rVAt1Dulde .mbr-text {
   color: #767676;
+}
+.cid-rVFIai5jYF {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rVFIai5jYF [class^="socicon-"]:before,
+.cid-rVFIai5jYF [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+.cid-rVFIai5jYF .btn-social {
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  position: relative;
+  color: #232323;
+  cursor: pointer;
+  border-color: #ff3366;
+}
+.cid-rVFIai5jYF .btn-social i {
+  top: 0;
+  line-height: 44px;
+  width: 44px;
+}
+.cid-rVFIai5jYF .btn-social:hover {
+  color: #fff;
+  background: #ff3366;
+}
+.cid-rVFIai5jYF .btn-social:hover i.socicon {
+  color: #ffffff !important;
+}
+.cid-rVFIai5jYF .btn-social + .btn {
+  margin-left: .1rem;
+}
+@media (max-width: 767px) {
+  .cid-rVFIai5jYF .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-rVFIai5jYF .btn-social,
+.cid-rVFIai5jYF .mbr-section-title {
+  color: #ff3366;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
