--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6320,9 +6320,9 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-rWfZmL2qSL {
-  padding-top: 120px !important;
+  padding-top: 105px !important;
   padding-bottom: 105px !important;
-  background-image: url("file:///C:/Users/Cliente/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-01-27_141809/assets/images/whatsapp%20image%202020-04-15%20at%2016.36.24-1200x540.jpeg") !important;
+  background-image: url("file:///C:/Users/Cliente/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-01-27_141809/assets/images/whatsapp%20image%202020-04-15%20at%2016.36.24-1200x540.jpg") !important;
 }
 .cid-rWfZmL2qSL H1 {
   color: #ff3366!important;
@@ -10355,119 +10355,6 @@ section.lazy-placeholder:after {
   .cid-rWeNGKeSBO .video-block {
     width: 100% !important;
   }
-}
-.cid-rWrGpGvB7s {
-  background: #131313;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.cid-rWrGpGvB7s .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rWrGpGvB7s .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rWrsWyt7jd {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #131313;
-}
-.cid-rWrsWyt7jd .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rWrsWyt7jd .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-rWrsWyt7jd .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-rWrsWyt7jd .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-rWrsWyt7jd .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-rWrsWyt7jd .countdown-cont {
-  background: linear-gradient(45deg, #cc2952, #7f1933);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-rWrsWyt7jd .dot {
-    display: none;
-  }
-  .cid-rWrsWyt7jd .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: 25%;
-    flex: 0 0 25%;
-  }
-  .cid-rWrsWyt7jd .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 576px) {
-  .cid-rWrsWyt7jd .row {
-    flex-wrap: nowrap;
-  }
-  .cid-rWrsWyt7jd .number {
-    white-space: nowrap;
-  }
-}
-@media (max-width: 440px) {
-  .cid-rWrsWyt7jd .number {
-    font-size: 30px;
-  }
-  .cid-rWrsWyt7jd .period {
-    font-size: 0.8rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rWrsWyt7jd .number {
-    font-size: 20px;
-  }
-  .cid-rWrsWyt7jd .period {
-    font-size: 0.6rem;
-  }
-}
-.cid-rWrsWyt7jd H2 {
-  color: #ff3366;
 }
 .cid-rWeOblDb8b {
   padding-top: 60px;
